# Computer-Algebra-System

./: .clang-format  .clang-tidy  .classpath  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile-Ubuntu  Dockerfile-Windows  README.md  benchmark.sh  build.bat  build.sh  docker-compose-ubuntu-gcc.yml  docker-compose-ubuntu.yml  imgui.ini  main.cpp
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml  gradle.yml
cas/: CMakeLists.txt
cas/bench/: CMakeLists.txt  bench.cpp
cas/bench/history/: benchmark-10-02-2022.json
cas/benchmark/: CMakeLists.txt  bench.cpp
cas/benchmark/history/: benchmark-10-02-2022.json
cas/docs/: core-modelv1.puml
cas/include/cas/: CAS.h
cas/include/cas/data/: ExpressionParser.h  ExpressionProperties.h  ExpressionType.h  VariableMap.h
cas/include/cas/latex/: LatexRenderer.h
cas/include/cas/math/: PieceWiseCondition.h
cas/include/cas/node/: Abs.h  BracketExpression.h  BracketFunction.h  Cbrt.h  Ceil.h  Const.h  Divide.h  Exp.h  Expression.h  ExpressionType.h  FixedInputFunction.h  Floor.h  IMath.h  IMathNode.h  IRepresentableMath.h  Ln.h  Log.h  Max.h  Min.h  Mod.h  MultipleInputFunction.h  NaryExpression.h  NaryFunction.h  Negate.h  Operator.h  Power.h  Prod.h  Product.h  Root.h  Round.h  Sign.h  Sqrt.h  Sum.h  UnaryExpression.h  UnaryFunction.h  Var.h
cas/include/cas/node/trig/: ArcCos.h  ArcCot.h  ArcCsc.h  ArcSec.h  ArcSin.h  ArcTan.h  Cos.h  Cot.h  Csc.h  InverseTrigExpression.h  InverseTrigFunction.h  Sec.h  Sin.h  Tan.h  TrigExpression.h  TrigFunction.h
cas/include/cas/plot/: Formula.h  Function.h  Surface.h
cas/include/cas/util/: StringUtils.h
cas/include/core/: CAS.h
cas/include/core/node/: Abs.h  BracketFunction.h  Cbrt.h  Ceil.h  Const.h  Constant.h  Divide.h  Exp.h  Expression.h  ExpressionNode.h  ExpressionProperties.h  ExpressionType.h  FixedInputFunction.h  Floor.h  IMathNode.h  Ln.h  Log.h  Max.h  Min.h  Mod.h  MultipleInputFunction.h  Negate.h  Operator.h  Power.h  Product.h  Root.h  Round.h  Sign.h  Sqrt.h  Sum.h  Var.h  Variable.h
cas/include/core/node/trig/: ArcSec.h  ArcSin.h  Cos.h  Cot.h  Csc.h  InverseTrigFunction.h  Sec.h  Sin.h  Tan.h  TrigFunction.h
cas/scratch/: scratch.cpp
cas/src/: CMakeLists.txt
cas/src/core/: CAS.cpp
cas/src/core/data/: ExpressionParser.cpp  ExpressionProperties.cpp  VariableMap.cpp
cas/src/core/latex/: LatexRenderer.cpp
cas/src/core/node/: Abs.cpp  BracketExpression.cpp  BracketFunction.cpp  Cbrt.cpp  Ceil.cpp  Const.cpp  Constant.cpp  Constant.h  Divide.cpp  Exp.cpp  Expression.cpp  ExpressionNode.h  FixedInputFunction.cpp  Floor.cpp  IMathNode.h  Ln.cpp  Log.cpp  Max.cpp  Min.cpp  Mod.cpp  MultipleInputFunction.cpp  NaryExpression.cpp  NaryFunction.cpp  Negate.cpp  Operator.cpp  Power.cpp  Product.cpp  Root.cpp  Round.cpp  Sign.cpp  Sqrt.cpp  Sum.cpp  UnaryExpression.cpp  UnaryFunction.cpp  Var.cpp  Variable.cpp
cas/src/core/node/trig/: ArcCos.cpp  ArcCot.cpp  ArcCsc.cpp  ArcSec.cpp  ArcSin.cpp  ArcTan.cpp  Cos.cpp  Cot.cpp  Csc.cpp  InverseTrigExpression.cpp  InverseTrigFunction.cpp  Sec.cpp  Sin.cpp  Tan.cpp  TrigExpression.cpp  TrigFunction.cpp
cas/src/core/plot/: Function.cpp  Surface.cpp
cas/src/util/: StringUtils.h
cas/tests/: CMakeLists.txt  test_runner.cpp
cas/tests/core/data/: ExpressionParserTest.cpp
cas/tests/core/node/: AbsNodeTest.cpp  ArcCosNodeTest.cpp  ArcCotNodeTest.cpp  ArcCscNodeTest.cpp  ArcSecNodeTest.cpp  ArcSinNodeTest.cpp  ArcTanNodeTest.cpp  BracketFunctionNodeTest.cpp  CbrtNodeTest.cpp  CeilNodeTest.cpp  ConstNodeTest.cpp  ConstantNodeTest.cpp  CosNodeTest.cpp  CotNodeTest.cpp  CscNodeTest.cpp  DivideNodeTest.cpp  ExpNodeTest.cpp  ExpressionNodeTest.cpp  FloorNodeTest.cpp  IMathNodeNodeTest.cpp  InverseTrigFunctionNodeTest.cpp  LnNodeTest.cpp  LogNodeTest.cpp  MaxNodeTest.cpp  MinNodeTest.cpp  ModNodeTest.cpp  NaryFunctionNodeTest.cpp  NegateNodeTest.cpp  OperatorNodeTest.cpp  PowerNodeTest.cpp  ProductNodeTest.cpp  RootNodeTest.cpp  RoundNodeTest.cpp  SecNodeTest.cpp  SignNodeTest.cpp  SinNodeTest.cpp  SqrtNodeTest.cpp  SumNodeTest.cpp  TanNodeTest.cpp  TrigFunctionNodeTest.cpp  (+3 more)
cas/tests/core/plot/: FunctionTest.cpp
cas/tests/core/util/: StringUtilsTest.cpp
latex-rendering/: .gitignore  build.gradle  settings.gradle
latex-rendering/src/main/java/cas/latex/: LatexRenderer.java
scripts/: dependency_graph.py  node_test_generator.py
scripts/codegen/: CodeGen.py  node_test_generator.py
src/: TODO List  main.cpp
src/main/: ComputerAlgebraSystem.java
src/main/testing/: ComputerAlgebraSystem.java  MainTester.java
src/main/wrapper/: ExpressionParser.java  MathTree.java
src/math/main/: MainTester.java
src/math/structure/: BracketFunction.java  Constant.java  DoubleInputFunction.java  Equation.java  Expression.java  ExpressionSorter.java  ExpressionType.java  FixedInputFunction.java  Fraction.java  Function.java  IMath.java  InverseTrigonometricFunction.java  Log.java  ManyInputFunction.java  MathTree.java  Mod.java  Operator.java  Parser.java  Power.java  Product.java  Sign.java  Sum.java  TrigonometricFunction.java  Trigonometry.java  Variable.java
src/math/wrapper/: Equation.java  EquationSet.java  Function.java  MathTree.java
src/render/metal/: Grid.h  Model.h  Surface.h  Window.h  main.mm  metal_math.h  metal_types.h  shader.metal
src/render/opengl/: main.cpp
src/rendering/GUI/: GUIRenderer.java  LatexRenderer.java  Texture.java
src/rendering/core/: Display.java  Renderer.java
src/rendering/data/: Curve.java  GraphableEquation.java  Grid.java  Range.java  Texture.java
src/rendering/latex/: LatexRenderer.java
src/rendering/plots/: Curve.java  CurvePair.java  Plot.java  Surface.java  SurfaceTrio.java
src/rendering/plotting/: Display.java  Renderer.java
src/rendering/tools/: Grid.java  Range.java
